--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -33,7 +33,7 @@
 			<md-content>
 			  <md-list flex>
 
-				<md-list-item  ng-repeat="item in deadlines" ng-click="null" >
+				<md-list-item  ng-repeat="item in deadlines track by $index" ng-click="null" >
 				  <span class="circle-gt-md md-title" style="background-color:{{item.color}}" >{{ item.module }}</span>
 				  <div class="md-list-item-text">
 					<p class="md-title"layout="row">{{ item.title }}</p>
@@ -83,8 +83,7 @@
 
 			<md-content>
 			  <md-list flex>
-
-				<md-list-item  ng-repeat="item in deadlines" ng-click="null" >
+				<md-list-item  ng-repeat="item in deadlines track by $index" ng-click="null" >
 				  <span class="circle md-display-2" style="background-color:{{item.color}}" >{{ item.module }}</span>
 				  <div class="md-list-item-text" >
 					<p class="md-display-2"layout="row">{{ item.title }}</p>
