display contributor name

--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -81,7 +81,7 @@
 				  <span class="circle title" style="background-color:{{item.color}}" >{{ item.module }}</span>
 				  <div class="md-list-item-text" >
 					<p class="md-title"layout="row">{{ item.title }}</p>
-					<p class="md-subhead"layout="row">Contributor: {{ item.cont }}</p>
+					<p class="md-subhead"layout="row">Contributor: {{ item.contributor }}</p>
 				  </div><span flex></span>
 				  <div layout="column">
 					<p class="md-subhead">{{ item.date}}</p>
