--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -35,7 +35,7 @@
 				  <span class="circle-gt-md md-title" style="background-color:{{item.color}}" >{{ item.module }}</span>
 				  <div class="md-list-item-text">
 					<p class="md-title"layout="row">{{ item.title }}</p>
-					<p class="md-subhead"layout="row">Contributed by: {{ item.cont }}</p>
+					<p class="md-subhead"layout="row">Contributor: {{ item.contributor }}</p>
 				  </div><span flex></span>
 				  <div layout="column">
 					<p class="md-title">{{ item.date}}</p>
