--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -23,7 +23,7 @@
 			</md-sidenav>
 		</div>
 		<div layout="column" flex>
-			<md-toolbar   class="md-hue-3">
+			<md-toolbar   class="md-hue-3 toolbar">
 			  <div class="md-toolbar-tools">
 				<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
 			  </div>
@@ -32,9 +32,9 @@
 			<md-content>
 			  <md-list flex>
 
-				<md-list-item  ng-repeat="item in deadlines" ng-click="null" >
+				<md-list-item  ng-repeat="item in deadlines" ng-click="view(item)">
 				  <span class="circle-gt-md md-title" style="background-color:{{item.color}}" >{{ item.module }}</span>
-				  <div class="md-list-item-text" layout="column">
+				  <div class="md-list-item-text" layout="column" >
 					<p class="md-title">{{ item.title }}</p>
 					<p class="md-subhead">Contributor: {{ item.contributor }}</p>
 				  </div><span flex></span>
@@ -71,7 +71,7 @@
 			</md-sidenav>
 		</div>
 		<div layout="column" flex>
-			<md-toolbar   class="md-hue-3 height-150">
+			<md-toolbar   class="md-hue-3 height-150 toolbar">
 			  <div class="md-toolbar-tools">
 				<img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/>
 				<span flex></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
@@ -81,9 +81,9 @@
 			<md-content>
 			  <md-list flex>
 
-				<md-list-item  ng-repeat="item in deadlines" ng-click="null" >
+				<md-list-item  ng-repeat="item in deadlines"  >
 				  <span class="circle title" style="background-color:{{item.color}}" >{{ item.module }}</span>
-				  <div class="md-list-item-text" layout="column" flex>
+				  <div class="md-list-item-text" layout="column" ng-click="view(item)" flex>
 					<md-list-item class="md-title"><span>{{ item.title }}</span><span flex></span><span class="md-body-1">{{ item.date}}</span></md-list-item>
 					<md-list-item class="md-body-1">Contributor: {{ item.contributor }}</md-list-item>
 				  </div>
