change color of header

--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -78,7 +78,7 @@
 			</md-sidenav>
 		</div>
 		<div layout="column" flex>
-			<md-toolbar   class="md-hue-3 height-150 toolbar">
+			<md-toolbar   class="md-hue-3 toolbar logo-header">
 			  <div class="md-toolbar-tools">
 				<img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/>
 				<span flex></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
