fixed logo moving around

--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -80,8 +80,7 @@
 		<div layout="column" flex>
 			<md-toolbar   class="md-hue-3 toolbar logo-header">
 			  <div class="md-toolbar-tools">
-				<img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/>
-				<span flex></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
+				<span flex><img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
 			  </div>
 			</md-toolbar>
 
