--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -2,7 +2,7 @@
 
 <md-content layout="row">
 
-
+<img ng-if="buffering" src="/images/buffer.gif">
 	<!--browser size-->
 	<md-content layout="column" hide show-gt-md class="full-height">
 		<md-sidenav
