--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -78,7 +78,7 @@
 			</md-sidenav>
 		</div>
 		<div layout="column" flex>
-			<md-toolbar   class="md-hue-3 toolbar">
+			<md-toolbar   class="md-hue-3 toolbar side-bar-fix">
 			  <div class="md-toolbar-tools">
 				<span flex><img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
 			  </div>
