--- a/public/app/directives/deadline.html
+++ b/public/app/directives/deadline.html
@@ -1,101 +1,93 @@
-
 <img class="loading" ng-if="buffering" src="/images/loading.gif">
-<md-content ng-if="!buffering"  layout="row">
+<md-content ng-if="!buffering" layout="row">
 
 
 	<!--browser size-->
 	<md-content layout="column" hide show-gt-md>
-		<md-sidenav
-	class="md-sidenav-left nav-border-right"
-	md-is-locked-open="$mdMedia('gt-md')"
-	md-whiteframe="4" flex>
-		<md-toolbar   class="md-hue-3 toolbar">
-					  <div class="md-toolbar-tools">
-						<span flex></span><span>Filter</span><span flex></span>
-					  </div>
-				</md-toolbar>
+		<md-sidenav class="md-sidenav-left nav-border-right" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4" flex>
+			<md-toolbar class="md-hue-3 toolbar">
+				<div class="md-toolbar-tools">
+					<span flex></span><span>Filter</span><span flex></span>
+				</div>
+			</md-toolbar>
 			<md-content layout-padding>
 				<md-list flex>
 
-					<md-list-item ng-repeat="mod in modules"  ng-click="filter(mod)">
-						<p class="md-title"layout="row" style="color:{{(mod == selected)?'red':'black'}}">{{slash(mod)}}</p>
+					<md-list-item ng-repeat="mod in modules" ng-click="filter(mod)">
+						<p class="md-title" layout="row" style="color:{{(mod == selected)?'red':'black'}}">{{slash(mod)}}</p>
 					</md-list-item>
 
 				</md-list>
-		  </md-content>
+			</md-content>
 		</md-sidenav>
 	</md-content>
-	<md-content hide show-gt-md  layout="column" flex>
-		<md-toolbar   class="md-hue-3 toolbar">
-		  <div class="md-toolbar-tools">
-			<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
-		  </div>
+	<md-content hide show-gt-md layout="column" flex>
+		<md-toolbar class="md-hue-3 toolbar">
+			<div class="md-toolbar-tools">
+				<span flex></span><span><img onClick='window.location="/";' class="logo" src="/images/logo.png"/></span><span flex></span>
+			</div>
 		</md-toolbar>
 
 		<md-content>
-		  <md-list flex>
+			<md-list flex>
 
-			<md-list-item  ng-repeat="item in deadlines" ng-click="view(item)">
-			  <span class="circle-gt-md md-title" style="background-color:{{item.color}}" >{{ slash(item.module) }}</span>
-			  <div class="md-list-item-text" layout="column" >
-				<p class="md-title">{{ item.title }}</p>
-				<p class="md-subhead">Contributor: {{ item.contributor }}</p>
-			  </div><span flex></span>
-			  <div layout="column">
-				<p class="md-title">{{ item.date}}</p>
-			  </div>
-			</md-list-item>
-		  </md-list>
+				<md-list-item ng-repeat="item in deadlines" ng-click="view(item)">
+					<span class="circle-gt-md md-title" style="background-color:{{item.color}}">{{ slash(item.module) }}</span>
+					<div class="md-list-item-text" layout="column">
+						<p class="md-title">{{ item.title }}</p>
+						<p class="md-subhead">Contributor: {{ item.contributor }}</p>
+					</div><span flex></span>
+					<div layout="column">
+						<p class="md-title">{{ item.date}}</p>
+					</div>
+				</md-list-item>
+			</md-list>
 		</md-content>
-		</md-content>
+	</md-content>
 
 	<!--mobile size-->
 	<div hide-gt-md layout="row" flex>
 		<div layout="column" class="full-height">
-			<md-sidenav
-				class="md-sidenav-left side-bar-fix"
-				md-component-id="left"
-				md-is-locked-open="$mdMedia('gt-md')"
-				md-whiteframe="4">
-				<md-toolbar   class="md-hue-3 toolbar">
-					  <div class="md-toolbar-tools">
+			<md-sidenav class="md-sidenav-left side-bar-fix" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')" md-whiteframe="4">
+				<md-toolbar class="md-hue-3 toolbar">
+					<div class="md-toolbar-tools">
 						<span flex></span><span>Filter</span><span flex></span>
-					  </div>
+					</div>
 				</md-toolbar>
 
-			  <md-content layout-padding>
+				<md-content layout-padding>
 
-				<md-list flex>
+					<md-list flex>
 
 
-					<md-list-item ng-repeat="mod in modules" ng-click="filter(mod)" >
-						<p class="md-title"layout="row" style="color:{{(mod == selected)?'red':'black'}}">{{slash(mod)}}</p>
+						<md-list-item ng-repeat="mod in modules" ng-click="filter(mod)">
+							<p class="md-title" layout="row" style="color:{{(mod == selected)?'red':'black'}}">{{slash(mod)}}</p>
 
-					</md-list-item>
-			  </md-content>
+						</md-list-item>
+				</md-content>
 
 
 			</md-sidenav>
 		</div>
 		<div layout="column" flex>
-			<md-toolbar   class="md-hue-3 toolbar side-bar-fix">
-			  <div class="md-toolbar-tools">
-				<span flex><img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
-			  </div>
+			<md-toolbar class="md-hue-3 toolbar side-bar-fix">
+				<div class="md-toolbar-tools">
+					<span flex><img class="drawer-icon" src="images/drawer.png" ng-click="toggleLeft()"/></span><span><img onClick='window.location="/";' class="logo" src="images/logo.png"/></span><span flex></span>
+				</div>
 			</md-toolbar>
 
 			<md-content>
-			  <md-list flex class="margin-top-70">
+				<md-list flex class="margin-top-70">
 
-				<md-list-item  ng-repeat="item in deadlines"  >
-				  <span class="circle md-body-2" style="background-color:{{item.color}}" >{{ slash(item.module) }}</span>
-				  <div class="" layout="column" ng-click="view(item)" flex>
-					<md-list-item class="md-body-2 remove-margin"><span>{{ item.title }}</span><span flex></span><span class="md-body-1">{{ item.date}}</span></md-list-item>
-					<md-list-item class="md-caption remove-margin">By {{ item.contributor }}</md-list-item>
-				  </div>
+					<md-list-item ng-repeat="item in deadlines">
+						<span class="circle md-body-2" style="background-color:{{item.color}}">{{ slash(item.module) }}</span>
+						<div class="" layout="column" ng-click="view(item)" flex>
+							<md-list-item class="md-body-2 remove-margin"><span>{{ item.title }}</span><span flex></span><span class="md-body-1">{{ item.date}}</span></md-list-item>
+							<md-list-item class="md-caption remove-margin">By {{ item.contributor }}</md-list-item>
+						</div>
 
-				</md-list-item>
-			  </md-list>
+					</md-list-item>
+				</md-list>
 			</md-content>
 		</div>
 	</div>
